# som-haiku

./: Cargo.toml  README.md  flake.nix
demo/: index.html  package.json  vite.config.js
demo/public/: hackclub
demo/src/: globals.css  main.ts
raw/: ID1.csv  ID2.csv
src/: est.rs  lib.rs  main.rs  numbers.rs
